@@ -1,3 +1,7 @@
+2009-02-17  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* observer.texi (test_notification): New observer.
+
 2009-02-14  Vladimir Prus  <vladimir@codesourcery.com>
 
         * observer.texi: Add parameter 'print_frame' to normal_stop
